[package]
name = "flow"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
wayland-backend = "0.3.3"
wayland-client = "0.31.2"
wayland-scanner = "0.31.1"
